--- a/content/settings.json
+++ b/content/settings.json
@@ -1,26 +1,26 @@
 {
-  "store_id": 50287,
-  "name": "vedecor",
   "domain": "vedecor.netlify.app",
-  "short_name": "vedecor",
-  "description": "vedecor",
-  "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
+  "currency_symbol": "R$",
+  "primary_color": "#00c2cb",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "repository": "ecomplus-stores/vedecor",
+  "logo": "/img/uploads/ve-1-.png",
+  "name": "Vedecor",
+  "short_name": "vedecor",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR",
-  "repository": "ecomplus-stores/vedecor",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/ve-1-.png",
   "icons_font": "_",
-  "font_family": "_"
+  "country_code": "BR",
+  "secondary_color": "#737373",
+  "icon": "/img/uploads/ve-1-.png",
+  "store_id": 50287,
+  "description": "vedecor",
+  "large_icon": "/img/uploads/ve-1-.png"
 }
